--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <script src="./js/jquery-3.6.3.js"></script>
     <script>
         $(document).ready(function () {
-            $('#u-food').mousemove(function () {
+            $('.u-food-l').mousemove(function () {
                 $(".u-food-side").css("display", "inline-flex");
             });
             $('.u-food-side').mousemove(function () {
                 $(".u-food-side").css("display", "inline-flex");
             });
-            $('#u-food').mouseleave(function () {
+            $('.u-food-l').mouseleave(function () {
                 $(".u-food-side").css("display", "none");
             });
             $('.u-food-side').mouseleave(function () {
@@ -25,13 +25,13 @@
             });
 
 
-            $('#u-waimai').mousemove(function () {
+            $('.u-waimai-l').mousemove(function () {
                 $(".u-waimai-side").css("display", "inline-flex");
             });
             $('.u-waimai-side').mousemove(function () {
                 $(".u-waimai-side").css("display", "inline-flex");
             });
-            $('#u-waimai').mouseleave(function () {
+            $('.u-waimai-l').mouseleave(function () {
                 $(".u-waimai-side").css("display", "none");
             });
             $('.u-waimai-side').mouseleave(function () {
@@ -39,13 +39,13 @@
             });
 
 
-            $('#u-jiudian').mousemove(function () {
+            $('.u-jiudian-l').mousemove(function () {
                 $(".u-jiudian-side").css("display", "inline-flex");
             });
             $('.u-jiudian-side').mousemove(function () {
                 $(".u-jiudian-side").css("display", "inline-flex");
             });
-            $('#u-jiudian').mouseleave(function () {
+            $('.u-jiudian-l').mouseleave(function () {
                 $(".u-jiudian-side").css("display", "none");
             });
             $('.u-jiudian-side').mouseleave(function () {
@@ -53,13 +53,13 @@
             });
 
 
-            $('#u-minsu').mousemove(function () {
+            $('.u-minsu-l').mousemove(function () {
                 $(".u-minsu-side").css("display", "inline-flex");
             });
             $('.u-minsu-side').mousemove(function () {
                 $(".u-minsu-side").css("display", "inline-flex");
             });
-            $('#u-minsu').mouseleave(function () {
+            $('.u-minsu-l').mouseleave(function () {
                 $(".u-minsu-side").css("display", "none");
             });
             $('.u-minsu-side').mouseleave(function () {
@@ -67,13 +67,13 @@
             });
 
 
-            $('#u-maoyandianying').mousemove(function () {
+            $('.u-maoyandianying-l').mousemove(function () {
                 $(".u-maoyandianying-side").css("display", "inline-flex");
             });
             $('.u-maoyandianying-side').mousemove(function () {
                 $(".u-maoyandianying-side").css("display", "inline-flex");
             });
-            $('#u-maoyandianying').mouseleave(function () {
+            $('.u-maoyandianying-l').mouseleave(function () {
                 $(".u-maoyandianying-side").css("display", "none");
             });
             $('.u-maoyandianying-side').mouseleave(function () {
@@ -81,13 +81,13 @@
             });
 
 
-            $('#u-jipiao').mousemove(function () {
+            $('.u-jipiao-l').mousemove(function () {
                 $(".u-jipiao-side").css("display", "inline-flex");
             });
             $('.u-jipiao-side').mousemove(function () {
                 $(".u-jipiao-side").css("display", "inline-flex");
             });
-            $('#u-jipiao').mouseleave(function () {
+            $('.u-jipiao-l').mouseleave(function () {
                 $(".u-jipiao-side").css("display", "none");
             });
             $('.u-jipiao-side').mouseleave(function () {
@@ -95,13 +95,13 @@
             });
 
 
-            $('#u-ktv').mousemove(function () {
+            $('.u-ktv-l').mousemove(function () {
                 $(".u-ktv-side").css("display", "inline-flex");
             });
             $('.u-ktv-side').mousemove(function () {
                 $(".u-ktv-side").css("display", "inline-flex");
             });
-            $('#u-ktv').mouseleave(function () {
+            $('.u-ktv-l').mouseleave(function () {
                 $(".u-ktv-side").css("display", "none");
             });
             $('.u-ktv-side').mouseleave(function () {
@@ -109,13 +109,13 @@
             });
 
 
-            $('#u-shenghuofuwu').mousemove(function () {
+            $('.u-shenghuofuwu-l').mousemove(function () {
                 $(".u-shenghuofuwu-side").css("display", "inline-flex");
             });
             $('.u-shenghuofuwu-side').mousemove(function () {
                 $(".u-shenghuofuwu-side").css("display", "inline-flex");
             });
-            $('#u-shenghuofuwu').mouseleave(function () {
+            $('.u-shenghuofuwu-l').mouseleave(function () {
                 $(".u-shenghuofuwu-side").css("display", "none");
             });
             $('.u-shenghuofuwu-side').mouseleave(function () {
@@ -123,13 +123,13 @@
             });
 
 
-            $('#u-liren').mousemove(function () {
+            $('.u-liren-l').mousemove(function () {
                 $(".u-liren-side").css("display", "inline-flex");
             });
             $('.u-liren-side').mousemove(function () {
                 $(".u-liren-side").css("display", "inline-flex");
             });
-            $('#u-liren').mouseleave(function () {
+            $('.u-liren-l').mouseleave(function () {
                 $(".u-liren-side").css("display", "none");
             });
             $('.u-liren-side').mouseleave(function () {
@@ -137,13 +137,13 @@
             });
 
 
-            $('#u-jiehun').mousemove(function () {
+            $('.u-jiehun-l').mousemove(function () {
                 $(".u-jiehun-side").css("display", "inline-flex");
             });
             $('.u-jiehun-side').mousemove(function () {
                 $(".u-jiehun-side").css("display", "inline-flex");
             });
-            $('#u-jiehun').mouseleave(function () {
+            $('.u-jiehun-l').mouseleave(function () {
                 $(".u-jiehun-side").css("display", "none");
             });
             $('.u-jiehun-side').mouseleave(function () {
@@ -151,13 +151,13 @@
             });
 
 
-            $('#u-qinzi').mousemove(function () {
+            $('.u-qinzi-l').mousemove(function () {
                 $(".u-qinzi-side").css("display", "inline-flex");
             });
             $('.u-qinzi-side').mousemove(function () {
                 $(".u-qinzi-side").css("display", "inline-flex");
             });
-            $('#u-qinzi').mouseleave(function () {
+            $('.u-qinzi-l').mouseleave(function () {
                 $(".u-qinzi-side").css("display", "none");
             });
             $('.u-qinzi-side').mouseleave(function () {
@@ -165,13 +165,13 @@
             });
 
 
-            $('#u-jianshen').mousemove(function () {
+            $('.u-jianshen-l').mousemove(function () {
                 $(".u-jianshen-side").css("display", "inline-flex");
             });
             $('.u-jianshen-side').mousemove(function () {
                 $(".u-jianshen-side").css("display", "inline-flex");
             });
-            $('#u-jianshen').mouseleave(function () {
+            $('.u-jianshen-l').mouseleave(function () {
                 $(".u-jianshen-side").css("display", "none");
             });
             $('.u-jianshen-side').mouseleave(function () {
@@ -179,13 +179,13 @@
             });
 
 
-            $('#u-jiazhuang').mousemove(function () {
+            $('.u-jiazhuang-l').mousemove(function () {
                 $(".u-jiazhuang-side").css("display", "inline-flex");
             });
             $('.u-jiazhuang-side').mousemove(function () {
                 $(".u-jiazhuang-side").css("display", "inline-flex");
             });
-            $('#u-jiazhuang').mouseleave(function () {
+            $('.u-jiazhuang-l').mouseleave(function () {
                 $(".u-jiazhuang-side").css("display", "none");
             });
             $('.u-jiazhuang-side').mouseleave(function () {
@@ -193,13 +193,13 @@
             });
 
 
-            $('#u-peixun').mousemove(function () {
+            $('.u-peixun-l').mousemove(function () {
                 $(".u-peixun-side").css("display", "inline-flex");
             });
             $('.u-peixun-side').mousemove(function () {
                 $(".u-peixun-side").css("display", "inline-flex");
             });
-            $('#u-peixun').mouseleave(function () {
+            $('.u-peixun-l').mouseleave(function () {
                 $(".u-peixun-side").css("display", "none");
             });
             $('.u-peixun-side').mouseleave(function () {
@@ -207,13 +207,13 @@
             });
 
 
-            $('#u-yiliao').mousemove(function () {
+            $('.u-yiliao-l').mousemove(function () {
                 $(".u-yiliao-side").css("display", "inline-flex");
             });
             $('.u-yiliao-side').mousemove(function () {
                 $(".u-yiliao-side").css("display", "inline-flex");
             });
-            $('#u-yiliao').mouseleave(function () {
+            $('.u-yiliao-l').mouseleave(function () {
                 $(".u-yiliao-side").css("display", "none");
             });
             $('.u-yiliao-side').mouseleave(function () {
@@ -221,13 +221,13 @@
             });
 
 
-            $('#u-jiuba').mousemove(function () {
+            $('.u-jiuba-l').mousemove(function () {
                 $(".u-jiuba-side").css("display", "inline-flex");
             });
             $('.u-jiuba-side').mousemove(function () {
                 $(".u-jiuba-side").css("display", "inline-flex");
             });
-            $('#u-jiuba').mouseleave(function () {
+            $('.u-jiuba-l').mouseleave(function () {
                 $(".u-jiuba-side").css("display", "none");
             });
             $('.u-jiuba-side').mouseleave(function () {
@@ -300,96 +300,96 @@
                     <span class="title">全部分类</span>
                 </div>
                 <ul>
-                    <li id="u-food">
+                    <li class="u-food-l">
                         <i class="u-food"></i>
                         <a href="#">美食</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-waimai">
+                    <li class="u-waimai-l">
                         <i class="u-waimai"></i>
                         <a href="#">外卖</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-jiudian">
+                    <li class="u-jiudian-l">
                         <i class="u-jiudian"></i>
                         <a href="#">酒店</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-minsu">
+                    <li class="u-minsu-l">
                         <i class="u-minsu"></i>
                         <a href="#">民宿</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-maoyandianying">
+                    <li class="u-maoyandianying-l">
                         <i class="u-maoyandianying"></i>
                         <a href="#">猫眼电影</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-jipiao">
+                    <li class="u-jipiao-l">
                         <i class="u-jipiao"></i>
                         <a href="#">机票&nbsp;/&nbsp;</a>
                         <a href="#">火车票</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-ktv">
+                    <li class="u-ktv-l">
                         <i class="u-ktv"></i>
                         <a href="#">休闲娱乐&nbsp;/&nbsp;</a>
                         <a href="#">KTV</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-shenghuofuwu">
+                    <li class="u-shenghuofuwu-l">
                         <i class="u-shenghuofuwu"></i>
                         <a href="#">生活服务</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-liren">
+                    <li class="u-liren-l">
                         <i class="u-liren"></i>
                         <a href="#">丽人&nbsp;/&nbsp;</a>
                         <a href="#">美发&nbsp;/&nbsp;</a>
                         <a href="#">医学美容</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-jiehun">
+                    <li class="u-jiehun-l">
                         <i class="u-jiehun"></i>
                         <a href="#">结婚&nbsp;/&nbsp;</a>
                         <a href="#">婚纱摄影&nbsp;/&nbsp;</a>
                         <a href="#">婚宴</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-qinzi">
+                    <li class="u-qinzi-l">
                         <i class="u-qinzi"></i>
                         <a href="#">亲子&nbsp;/&nbsp;</a>
                         <a href="#">儿童乐园&nbsp;/&nbsp;</a>
                         <a href="#">幼教</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-jianshen">
+                    <li class="u-jianshen-l">
                         <i class="u-jianshen"></i>
                         <a href="#">运动健身&nbsp;/&nbsp;</a>
                         <a href="#">健身中心</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-jiazhuang">
+                    <li class="u-jiazhuang-l">
                         <i class="u-jiazhuang"></i>
                         <a href="#">家装&nbsp;/&nbsp;</a>
                         <a href="#">建材&nbsp;/&nbsp;</a>
                         <a href="#">家居</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-peixun">
+                    <li class="u-peixun-l">
                         <i class="u-peixun"></i>
                         <a href="#">学习培训&nbsp;/&nbsp;</a>
                         <a href="#">音乐培训</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-yiliao">
+                    <li class="u-yiliao-l">
                         <i class="u-yiliao"></i>
                         <a href="#">医疗健康&nbsp;/&nbsp;</a>
                         <a href="#">宠物&nbsp;/&nbsp;</a>
                         <a href="#">爱车</a>
                         <i class="u-more"></i>
                     </li>
-                    <li id="u-jiuba">
+                    <li class="u-jiuba-l">
                         <i class="u-jiuba"></i>
                         <a href="#">酒吧&nbsp;/&nbsp;</a>
                         <a href="#">密室逃脱</a>
